--- a/Objective-C UI Project/Source/FirstTask/ViewController/ANSViewControllerFirstTask.xib
+++ b/Objective-C UI Project/Source/FirstTask/ViewController/ANSViewControllerFirstTask.xib
@@ -11,12 +11,12 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="ANSLableView">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hello World" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fRt-ZC-the">
-                    <rect key="frame" x="0.0" y="0.0" width="279" height="151"/>
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="204"/>
                     <color key="backgroundColor" red="0.74189597368240356" green="0.91569691896438599" blue="0.49297010898590088" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <fontDescription key="fontDescription" type="system" pointSize="49"/>
                     <color key="textColor" red="0.96836012601852417" green="0.05768083781003952" blue="0.13575169444084167" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -27,6 +27,9 @@
                 </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <connections>
+                <outlet property="lable" destination="fRt-ZC-the" id="vP0-3B-RN7"/>
+            </connections>
         </view>
     </objects>
 </document>
