--- a/Objective-C UI Project/Source/FirstTask/ViewController/ANSViewControllerFirstTask.xib
+++ b/Objective-C UI Project/Source/FirstTask/ViewController/ANSViewControllerFirstTask.xib
@@ -11,24 +11,31 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="ANSLableView">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="ANSMainView">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Hello World" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fRt-ZC-the">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="204"/>
-                    <color key="backgroundColor" red="0.74189597368240356" green="0.91569691896438599" blue="0.49297010898590088" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="49"/>
-                    <color key="textColor" red="0.96836012601852417" green="0.05768083781003952" blue="0.13575169444084167" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <nil key="highlightedColor"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ju4-Er-EBw" customClass="ANSAnimaterView">
+                    <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                    <color key="backgroundColor" red="0.97659140825271606" green="0.15578532218933105" blue="0.0028559823986142874" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <variation key="widthClass=compact" fixedFrame="YES">
-                        <rect key="frame" x="0.0" y="0.0" width="400" height="162"/>
+                        <rect key="frame" x="150" y="250" width="100" height="100"/>
                     </variation>
-                </label>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <variation key="default">
+                <mask key="subviews">
+                    <exclude reference="ju4-Er-EBw"/>
+                </mask>
+            </variation>
+            <variation key="widthClass=compact">
+                <mask key="subviews">
+                    <include reference="ju4-Er-EBw"/>
+                </mask>
+            </variation>
             <connections>
-                <outlet property="lable" destination="fRt-ZC-the" id="vP0-3B-RN7"/>
+                <outlet property="view" destination="ju4-Er-EBw" id="7eY-Zu-YW0"/>
             </connections>
         </view>
     </objects>
