--- a/Objective-C UI Project/Source/SecondTask/UI/ASNViewControllerTables/ANSViewControllerTables.xib
+++ b/Objective-C UI Project/Source/SecondTask/UI/ASNViewControllerTables/ANSViewControllerTables.xib
@@ -20,6 +20,15 @@
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <color key="separatorColor" red="0.033932551741600037" green="0.023052006959915161" blue="0.073954395949840546" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <searchBar key="tableHeaderView" contentMode="redraw" barStyle="black" searchBarStyle="minimal" placeholder="text for searching" id="ca3-ih-41w">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                        <color key="barTintColor" red="0.53826719522476196" green="0.24289709329605103" blue="0.084576152265071869" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
+                        <connections>
+                            <outlet property="delegate" destination="-1" id="zuz-dj-u6w"/>
+                        </connections>
+                    </searchBar>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="px9-KJ-Guf"/>
                         <outlet property="delegate" destination="-1" id="Osw-w8-Xx9"/>
@@ -28,9 +37,10 @@
             </subviews>
             <color key="backgroundColor" red="0.99577277898788452" green="0.9922446608543396" blue="0.99200206995010376" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <connections>
+                <outlet property="searchBar" destination="ca3-ih-41w" id="P1h-Se-acM"/>
                 <outlet property="table" destination="djj-HE-MvU" id="Rp5-nZ-1gL"/>
             </connections>
-            <point key="canvasLocation" x="268" y="340"/>
+            <point key="canvasLocation" x="143" y="302"/>
         </view>
     </objects>
 </document>
