--- a/Objective-C UI Project/Source/SecondTask/UI/ANSLoadingView/ANSLoadingView.xib
+++ b/Objective-C UI Project/Source/SecondTask/UI/ANSLoadingView/ANSLoadingView.xib
@@ -16,7 +16,8 @@
                     <color key="color" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </activityIndicatorView>
             </subviews>
-            <color key="backgroundColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="tintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
             <connections>
                 <outlet property="indicator" destination="lCf-0x-1Ni" id="dgg-VN-wD4"/>
             </connections>
