--- a/Objective-C UI Project/Source/SecondTask/UI/ANSLoadingView/ANSLoadingView.xib
+++ b/Objective-C UI Project/Source/SecondTask/UI/ANSLoadingView/ANSLoadingView.xib
@@ -16,7 +16,7 @@
                     <color key="color" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </activityIndicatorView>
             </subviews>
-            <color key="backgroundColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <color key="tintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
             <connections>
                 <outlet property="indicator" destination="lCf-0x-1Ni" id="dgg-VN-wD4"/>
