--- a/Objective-C UI Project/Source/SecondTask/UI/ANSLoadingView/ANSLoadingView.xib
+++ b/Objective-C UI Project/Source/SecondTask/UI/ANSLoadingView/ANSLoadingView.xib
@@ -6,7 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view alpha="0.90000000000000002" contentMode="scaleToFill" id="iN0-l3-epB" customClass="ANSLoadingView">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ANSLoadingView">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
             <subviews>
