--- a/Objective-C UI Project/Source/SecondTask/UI/ASNViewControllerTables/ANDDataCell/ANSUserCell.xib
+++ b/Objective-C UI Project/Source/SecondTask/UI/ASNViewControllerTables/ANDDataCell/ANSUserCell.xib
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="79" id="KGk-i7-Jjw" customClass="ANSDataCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="79" id="KGk-i7-Jjw" customClass="ANSUserCell">
             <rect key="frame" x="0.0" y="0.0" width="318" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -22,7 +21,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" id="LyH-NG-GwF" customClass="ANSImageView">
-                        <rect key="frame" x="8" y="0.0" width="79" height="79"/>
+                        <rect key="frame" x="3" y="0.0" width="79" height="79"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -30,8 +29,8 @@
             </tableViewCellContentView>
             <color key="backgroundColor" red="0.19436320662498474" green="0.81301844120025635" blue="0.91241949796676636" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <connections>
-                <outlet property="label" destination="DuU-vV-Szy" id="idb-X6-033"/>
-                <outlet property="userImageView" destination="LyH-NG-GwF" id="2U1-XR-SNm"/>
+                <outlet property="label" destination="DuU-vV-Szy" id="QyV-t1-gqN"/>
+                <outlet property="userImageView" destination="LyH-NG-GwF" id="fcX-EK-DZY"/>
             </connections>
             <point key="canvasLocation" x="164" y="96"/>
         </tableViewCell>
