--- a/Objective-C UI Project/Source/SecondTask/UI/ANSLoadingView/ANSLoadingView.xib
+++ b/Objective-C UI Project/Source/SecondTask/UI/ANSLoadingView/ANSLoadingView.xib
@@ -13,10 +13,10 @@
                 <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" id="lCf-0x-1Ni">
                     <rect key="frame" x="143" y="264" width="37" height="37"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                    <color key="color" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="color" red="0.53826719522476196" green="0.24289709329605103" blue="0.084576152265071869" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </activityIndicatorView>
             </subviews>
-            <color key="backgroundColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.82382417929292928" green="0.82382417929292928" blue="0.82382417929292928" alpha="0.5" colorSpace="calibratedRGB"/>
             <color key="tintColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
             <connections>
                 <outlet property="indicator" destination="lCf-0x-1Ni" id="dgg-VN-wD4"/>
