--- a/Objective-C UI Project/Source/FifthTask/UI/ANSLoginView/ANSLoginViewController.xib
+++ b/Objective-C UI Project/Source/FifthTask/UI/ANSLoginView/ANSLoginViewController.xib
@@ -16,7 +16,7 @@
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="p2s-xJ-9fU">
                     <rect key="frame" x="85" y="269" width="150" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="0.5" colorSpace="calibratedRGB"/>
                     <state key="normal" title="Login button"/>
                     <connections>
