ANSLoginViewController created. => transition to next viewControler

--- a/Objective-C UI Project/Source/SecondTask/UI/ASNViewControllerTables/ANSFriendListViewController.xib
+++ b/Objective-C UI Project/Source/SecondTask/UI/ASNViewControllerTables/ANSFriendListViewController.xib
@@ -4,7 +4,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ANSViewControllerTables" customModule="ANSViewControllerTables">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ANSFriendListViewController" customModule="ANSViewControllerTables">
             <connections>
                 <outlet property="rightSwipeGesture" destination="klo-zq-qHs" id="TdX-cz-P0j"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
