--- a/Objective-C UI Project/Source/FifthTask/UI/ANSLoginViewController/ANSLoginViewController.xib
+++ b/Objective-C UI Project/Source/FifthTask/UI/ANSLoginViewController/ANSLoginViewController.xib
@@ -21,7 +21,7 @@
                     <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
                     <state key="normal" title="Login button"/>
                     <connections>
-                        <action selector="onLogin:" destination="-1" eventType="touchUpInside" id="fy6-r0-LgF"/>
+                        <action selector="onLogin:" destination="-1" eventType="touchUpInside" id="oMe-5c-n4B"/>
                     </connections>
                 </button>
             </subviews>
